--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "lifecycle",
-  "version": "0.0.2",
+  "name": "ecosystem",
+  "version": "0.0.1",
   "description": "Simple, awesome, asynchronous dependency injection and lifecycle control.",
-  "author": "Kyle Dawkins <kdawkins@fastmail.fm>",
-  "main": "",
+  "author": {
+    "name": "Kyle Dawkins",
+    "email": "info@kyledawkins.com"
+  },
+  "main": "./ecosystem.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/quile/lifecycle.git"
+    "url": "git://github.com/quile/ecosystem.git"
   },
   "license": "MIT",
   "dependencies": {
